# tRust_exchange

./: .gitignore  .gitmodules  README.md
router/: Cargo.toml  dummy-supergraph.graphql  router.yaml
router/src/: authenticator.rs  main.rs
