[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
apollo-router = "1.8"
async-trait = "0.1"
chrono = "0.4"
jsonwebtoken = "8"
rsa = "0.8.1"
rand = "0.8"
schemars = { version = "0.8", features = ["url"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
